examples/test/testpolicy8470.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8470
  namespace: namespace14
spec:
  podSelector:
    matchLabels:
      key43: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value20
          key45: value47
      podSelector:
        matchLabels:
          key40: value23
          key47: value28
